k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: api-test  # 네임스페이스 지정
spec:
  selector:
    app: api-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer  # 외부 접근을 위해 LoadBalancer 사용
